# atlas

./: .gitignore  .pre-commit-config.yaml  BOOTSTRAP.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
atlas/: bootstrap.py  hooks.py  install.py  patches.txt  setup.py
atlas/atlas/: atlas_settings.py  bench_image.py  central_report.py  dashboard.py  deploy_site.py  dev.py  digitalocean.py  front_door.py  image_builder.py  image_recipes.py  local_task.py  migration.py  networking.py  packing.py  packing_metrics.py  packing_sim.py  permissions.py  placement.py  provisioning.py  proxy.py  reset.py  s3.py  satellite_events.py  script_uploads.py  scripts_catalog.py  setup_catalog.py  site_status.py  sizes.py  subdomain_label.py  test_dashboard.py  test_deploy_site.py  test_local_task.py  (+7 more)
bench/: README.md  bench-domain-provider.py  bench.toml  build.sh  deploy-site.py  warm.sh
dashboard/: .gitignore  CONTRACT.md  FIELDS.md  README.md  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js  vite.config.js
llm/: Taste.md
plan/: 00-overview.md  code-review-checklist.md  code-review-readability.md  code-review.md  drift.md  phase-1-ssh-and-task.md  phase-3-server-and-bootstrap.md  phase-4-image-and-sync.md  phase-5-vm-provision.md  phase-6-vm-lifecycle.md  phase-7-run-task-and-polish.md
proxy/: build.sh
scripts/: README.md  bootstrap-server.py  bootstrap-server.sh  delete-snapshot-vm.py  delete-snapshot-vm.sh  delete-vm.sh  firewall-apply.py  issue-cert.py  migration-cleanup-source.py  migration-clone-target.py  migration-export-base.py  migration-forward-down.py  migration-forward-up.py  migration-poll-hydration.py  migration-receive-base.py  migration-source-forward.py  migration-target-receive.py  pause-vm.sh  promote-snapshot-image.py  provision-vm.py  provision-vm.sh  rebuild-vm.py  rebuild-vm.sh  regenerate-host-keys-vm.py  reset-server.py  resize-vm.py  resize-vm.sh  restore-snapshot-s3.py  resume-vm.sh  server-facts.py  snapshot-stop-vm.py  snapshot-vm.sh  start-vm.py  start-vm.sh  stop-vm.py  stop-vm.sh  sync-image.py  sync-image.sh  terminate-vm.py  terminate-vm.sh  (+9 more)
spec/: 01-architecture.md  02-doctypes.md  03-bootstrapping.md  04-tasks.md  05-virtual-machine-lifecycle.md  06-networking.md  07-filesystem-layout.md  08-images.md  09-roadmap.md  10-desk-ui.md  11-user-ui.md  12-proxy.md  13-tls.md  14-self-serve.md  15-image-builder.md  16-central.md  18-bench-self-routing.md  19-tunnel.md  19-vm-migration.md  19-vpn-broker.md  20-firewall.md  23-supply-chain.md  24-vm-migration.md  28-placement.md  29-snapshot-backup.md  30-core-service-boundary.md  README.md
(+313 files in other folders)
