[project]
name = "atlas"
authors = [
    { name = "Frappe", email = "aditya@frappe.io"}
]
description = "Frappe Hosting Platform"
requires-python = ">=3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.0" # Installed and managed by bench.
    "boto3",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

# These apt dependencies will be installed from Ubuntu repositories when you host your app on Frappe Cloud
[deploy.dependencies.apt]
packages = []

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "UP030", # Use implicit references for positional format fields (translations)
    "UP031", # Use format specifiers instead of percent format
    "UP032", # Use f-string instead of `format` call (translations)
    "UP037", # quoted annotations
    "UP040", # Use type aliases instead of type annotations
]
typing-modules = ["frappe.types.DF"]
# The placement/capacity docs use typographic − (minus) and × (times) in math
# expressions (e.g. "total − reserve", "2 GB × cores"); whitelist just those two
# confusables so RUF001/002/003 don't flag the intentional notation.
allowed-confusables = ["−", "×"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

# isort is configured to produce byte-identical output to ruff's import sorter
# (the `I` rule above), so the two never fight. If you change line-length,
# first-party packages, or the ruff format indent, mirror it here too.
[tool.isort]
profile = "black"
line_length = 110
indent = "\t"
known_first_party = ["atlas"]
split_on_trailing_comma = true
